Basic oppsett med isalive

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,16 +1,16 @@
 spring:
   autoconfigure.exclude: org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+  main.banner-mode: "off"
   jersey:
     application-path: /
-    servlet:
-      load-on-startup: 1
+
 server:
-  port: 8080
   servlet:
     context-path: /person/arbeidsforhold
+    
 no.nav.security.oidc:
   issuers: selvbetjening
   issuer.selvbetjening:
-     discoveryurl: http://metadata
-     accepted_audience: aud-localhost
-     cookie_name: localhost-idtoken
+    discoveryurl: http://metadata
+    accepted_audience: aud-localhost
+    cookie_name: localhost-idtoken
