Navnebytte til arbeidsforhold-api

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,8 +1,8 @@
 #jeg vil ikke ha hjelp fra pus
 #Vi må ha kommentaren over så lenge vi ikke bruker appdynamics her, dette bør vi fikse på sikt
 team: "personbruker"
-name: arbeidsforhold
-image: docker.adeo.no:5000/personbruker/arbeidsforhold
+name: arbeidsforhold-api
+image: docker.adeo.no:5000/personbruker/arbeidsforhold-api
 replicas:
   min: 1
   max: 4
@@ -12,14 +12,14 @@ ingress:
   enabled: true
 prometheus:
   enabled: true
-  path: person/arbeidsforhold/internal/prometheus
+  path: person/arbeidsforhold-api/internal/prometheus
 healthcheck:
   liveness:
     initialDelay: 20
-    path: person/arbeidsforhold/internal/isAlive
+    path: person/arbeidsforhold-api/internal/isAlive
   readiness:
     initialDelay: 20
-    path: person/arbeidsforhold/internal/isAlive
+    path: person/arbeidsforhold-api/internal/isAlive
 resources:
   limits:
     cpu: 3
