--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>no.nav.sbl</groupId>
-    <artifactId>arbeidsforhold</artifactId>
+    <artifactId>arbeidsforhold-api</artifactId>
     <version>1</version>
     <packaging>jar</packaging>
 
