--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,7 +6,7 @@ spring:
 
 server:
   servlet:
-    context-path: /person/arbeidsforhold
+    context-path: /person/arbeidsforhold-api
 
 no.nav.security.oidc:
   issuers: selvbetjening
