--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ logging:
     org.glassfish: INFO
     no.nav: INFO
 
+http.proxy: http://webproxy-nais.nav.no:8088
+
 no.nav.security.oidc:
   issuers: selvbetjening
   issuer.selvbetjening:
