--- a/app-config.yaml
+++ b/app-config.yaml
@@ -33,3 +33,7 @@ fasitResources:
       resourceType: baseurl
       propertyMap:
         url: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_DISCOVERYURL
+    - alias: kodeverk.rest-api
+      resourceType: restservice
+    - alias: arbeidsforhold-api-kodeverk.rest-api-apiKey
+      resourceType: credential
