--- a/app-config.yaml
+++ b/app-config.yaml
@@ -37,3 +37,11 @@ fasitResources:
       resourceType: restservice
     - alias: arbeidsforhold-api-kodeverk.rest-api-apiKey
       resourceType: credential
+    - alias: aareg.api
+      resourceType: restservice
+    - alias: ereg.api
+      resourceType: restservice
+    - alias: arbeidsforhold-api-aareg.api-apiKey
+      resourceType: credential
+    - alias: arbeidsforhold-api-ereg.api-apiKey
+      resourceType: credential
