IN-765 Konfigurert opp servicebruker for arbeidsforhold

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -49,3 +49,5 @@ fasitResources:
       resourceType: credential
     - alias: security-token-service-token
       resourceType: restservice
+    - alias: srvarbeidsforhold-api
+      resourceType: credential
