Feature/in 765 arbeidsforhold (#4)
* IN-765 RestConfig for aareg og ereg

* IN-765 All kode over til arbeidsforhold-api

* IN-765 Lagt på sist bekreftet

* IN-765 Oppdatert logikk for arbeidsforhold

* IN-765 Lagt på Kodeverk-config

* IN-765 Lagt på uthenting av kodeverk

* IN-765 Endret på OIDC-configen

* IN-765 Bruker riktig nøkkel for kodeverk

* IN-765 Endret path til norg2-enhet-url

* IN-765 Lagt på root-path på tjenesten

* IN-765 Sørget for å registrere arbeidsforhold-tjenesten

* IN-765 Registrert den andre tjenesten også

* IN-765 Setter bønne til Repository i stedet for Component

* IN-765 Ryddet i ArbeidsforholdRestConfiguration

* IN-765 Tester

* IN-765 Fjernet ArbeidsforholdService fra configen

* IN-765 Fjernet config fra ArbeidsforholdFnrResource også

* IN-765 Endret på konfigurasjonen til ComponentScan

* IN-765 Lagt på autowiring av bønnene

* IN-765 Tester feil

* IN-765 Ryddet igjen i configen

* IN-765 Fjernet 200-innslag fra loggen

* IN-765 Endret ComponentScan igjen

* IN-765 Satt Primary på MultiIssuerProperties

* IN-765 Utvidet componentscan

* IN-765 Ryddet opp i appen

* IN-765 Lagt på endepunkter for eereg og areg

* IN-765 Lagt på bruker for STSService

* IN-765 Lagt på kodeverksoppslag

* IN-765 Fikset testene

* IN-765 Lagt på rapporteringsperiode på antallTimerForTimeloennet

* IN-765 Konfigurert opp servicebruker for arbeidsforhold

* IN-765 Filtrerer ut isAlive-innslag

* IN-765 Printer ut token

* IN-765 Fikset på EREG-tjenesten

* IN-765 Ignorerer ukjente properties

* IN-765 Endret navn på arbeidsforholdId til navarbeidsforholdId

* IN-765 Justert på navnelinjene i arbeidsgiver

* IN-765 Lagt på logging av responsen

* IN-765 Lagt på maritime arbeidsforhold

* IN-765 Endret navn på navArbeidsforholdId

* IN-765 Endret kodeverk til å hente arbeidsforholdstype fremfor arbeidstidsodning

* IN-765 Lagt på kodeverk for arbeidstidsordning

* IN

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -33,3 +33,21 @@ fasitResources:
       resourceType: baseurl
       propertyMap:
         url: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_DISCOVERYURL
+    - alias: kodeverk.rest-api
+      resourceType: restservice
+    - alias: arbeidsforhold-api-kodeverk.rest-api-apiKey
+      resourceType: credential
+    - alias: aareg.api
+      resourceType: restservice
+    - alias: ereg.api
+      resourceType: restservice
+    - alias: arbeidsforhold-api-aareg.api-apiKey
+      resourceType: credential
+    - alias: arbeidsforhold-api-ereg.api-apiKey
+      resourceType: credential
+    - alias: arbeidsforhold-api-security-token-service-token-apiKey
+      resourceType: credential
+    - alias: security-token-service-token
+      resourceType: restservice
+    - alias: srvarbeidsforhold-api
+      resourceType: credential
