--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,18 @@
         <dependency>
             <groupId>no.nav.security</groupId>
             <artifactId>oidc-jersey-support</artifactId>
-            <version>${oidc-support.version}</version>
+            <version>0.2.18</version>
         </dependency>
         <dependency>
             <groupId>no.nav.security</groupId>
             <artifactId>oidc-test-support</artifactId>
-            <version>${oidc-support.version}</version>
+            <version>0.2.18</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>no.nav.sbl</groupId>
+            <groupId>no.nav.common</groupId>
             <artifactId>rest</artifactId>
-            <version>${common-java-modules.version}</version>
+            <version>1.2019.07.11-12.31-0b875ec24c4e</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.vaadin.external.google</groupId>
@@ -212,9 +212,9 @@
             <version>${jackson-module-kotlin.version}</version>
         </dependency>
         <dependency>
-            <groupId>no.nav.sbl</groupId>
+            <groupId>no.nav.common</groupId>
             <artifactId>log</artifactId>
-            <version>${common-java-modules.version}</version>
+            <version>1.2019.07.11-12.31-0b875ec24c4e</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
