--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,6 @@ jobs:
           paths:
             - target/*
 
-
-
   deploy-til-dev:
     docker:
       - image: circleci/openjdk:8-jdk
@@ -44,7 +42,7 @@ jobs:
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
             docker push "$DOCKER_IMAGE_VERSIONED"
       - run:
-          name: Deployer til devmvn
+          name: Deployer til dev
           command: |
             curl -i \
                 -X POST \
