--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,6 @@ http.proxy: http://webproxy-nais.nav.no:8088
 no.nav.security.oidc:
   issuers: selvbetjening
   issuer.selvbetjening:
-    discoveryurl: <Hentes fra fasit>
-    acceptedaudience: <Hentes fra fasit>
+    discoveryurl: ${AAD_B2C_DISCOVERY_URL}
+    acceptedaudience: ${AAD_B2C_CLIENTID_USERNAME}
     cookie_name: selvbetjening-idtoken
