--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,10 +11,8 @@ server:
 logging:
   config: "classpath:logback-spring.xml"
 
-http.proxy: http://webproxy-nais.nav.no:8088
-
 no.nav.security.oidc:
-  issuers: selvbetjening
+  issuers: ${AAD_B2C_ISSUER}
   issuer.selvbetjening:
     discoveryurl: ${AAD_B2C_DISCOVERY_URL}
     acceptedaudience: ${AAD_B2C_CLIENTID_USERNAME}
