--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,6 @@ http.proxy: http://webproxy-nais.nav.no:8088
 no.nav.security.oidc:
   issuers: selvbetjening
   issuer.selvbetjening:
-    discoveryurl: ${AAD_B2C_DISCOVERY_URL}
-    acceptedaudience: ${AAD_B2C_CLIENTID_USERNAME}
+    discoveryurl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL}
+    acceptedaudience: ${LOGINSERVICE_IDPORTEN_AUDIENCE}
     cookie_name: selvbetjening-idtoken
