--- a/.nais/config.yaml
+++ b/.nais/config.yaml
@@ -20,12 +20,20 @@ spec:
   readiness:
     path: /person/arbeidsforhold-api/internal/isAlive
     initialDelay: 10
-  vault:
-    enabled: true
   replicas:
     min: 2
     max: 4
   webproxy: true
+  tokenx:
+    enabled: true
+  accessPolicy:
+    rules:
+      - application: personopplysninger-proxy
+        namespace: personbruker
+        cluster: {{ fss-cluster }}
+    outbound:
+      external:
+        - host: {{ proxy-host }}
   resources:
     limits:
       cpu: '3'
@@ -33,6 +41,7 @@ spec:
     requests:
       memory: 1500Mi
   envFrom:
+    - secret: dsop-api-secret
     - configmap: loginservice-idporten
   prometheus:
     enabled: true
