personopplysninger-host -> proxy-host

--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -45,7 +45,7 @@ jobs:
             - https://www.nav.no/person/arbeidsforhold-api
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
-          personopplysninger-host: https://personopplysninger-proxy.prod-fss-pub.nais.io,
+          proxy-host: https://personopplysninger-proxy.prod-fss-pub.nais.io,
           fss-cluster: prod-fss
           EOF
       - uses: nais/deploy/actions/deploy@master
