--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.6.6</version>
     </parent>
 
     <groupId>no.nav.sbl</groupId>
@@ -21,7 +21,7 @@
         <jersey-test-framework.version>2.26</jersey-test-framework.version>
         <kotlin-logging.version>1.5.4</kotlin-logging.version>
         <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
-        <kotlin.version>1.3.11</kotlin.version>
+        <kotlin.version>1.6.0</kotlin.version>
         <swagger-annotations.version>1.5.21</swagger-annotations.version>
         <arrow.version>0.8.1</arrow.version>
         <swagger-codegen-maven-plugin.version>3.0.2</swagger-codegen-maven-plugin.version>
