--- a/pom.xml
+++ b/pom.xml
@@ -16,19 +16,20 @@
     <packaging>jar</packaging>
 
     <properties>
-        <common-java-modules.version>2018.10.02.19.54</common-java-modules.version>
-        <commons-logging.version>1.1</commons-logging.version>
-        <jersey-test-framework.version>2.26</jersey-test-framework.version>
-        <kotlin-logging.version>1.5.4</kotlin-logging.version>
-        <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
-        <kotlin.version>1.6.0</kotlin.version>
+        <java.version>17</java.version>
+        <kotlin.version>1.6.10</kotlin.version>
+
+        <commons-logging.version>1.2</commons-logging.version>
+        <jersey-test-framework.version>3.0.4</jersey-test-framework.version>
+        <kotlin-logging.version>2.1.21</kotlin-logging.version>
+        <logstash-logback-encoder.version>7.0.1</logstash-logback-encoder.version>
         <swagger-annotations.version>1.5.21</swagger-annotations.version>
-        <arrow.version>0.8.1</arrow.version>
+        <arrow.version>1.0.1</arrow.version>
         <swagger-codegen-maven-plugin.version>3.0.2</swagger-codegen-maven-plugin.version>
         <jackson-module-kotlin.version>2.9.8</jackson-module-kotlin.version>
         <konfig-version>1.6.10.0</konfig-version>
         <prometheus.version>0.15.0</prometheus.version>
-        <oidc-support.version>1.3.10</oidc-support.version>
+        <oidc-support.version>2.0.14</oidc-support.version>
     </properties>
 
     <build>
@@ -87,9 +88,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
+            <groupId>no.nav.security</groupId>
+            <artifactId>token-validation-core</artifactId>
+            <version>${oidc-support.version}</version>
         </dependency>
         <dependency>
             <groupId>no.nav.security</groupId>
@@ -98,13 +99,14 @@
         </dependency>
         <dependency>
             <groupId>no.nav.security</groupId>
-            <artifactId>token-validation-test-support</artifactId>
+            <artifactId>token-validation-spring-test</artifactId>
             <version>${oidc-support.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>rest</artifactId>
-            <version>1.2019.07.11-12.31-0b875ec24c4e</version>
+            <version>2.2022.03.24_11.44-7e5749de5446</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.vaadin.external.google</groupId>
@@ -165,14 +167,6 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!-- Swagger annotations in generated code by swagger code-gen -->
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${swagger-annotations.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -225,12 +219,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>${jackson-module-kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>log</artifactId>
-            <version>1.2019.07.11-12.31-0b875ec24c4e</version>
+            <version>2.2022.03.24_11.44-7e5749de5446</version>
         </dependency>
         <dependency>
             <groupId>com.natpryce</groupId>
@@ -250,13 +243,13 @@
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>2.3.2</version>
+            <version>3.0.1</version>
         </dependency>
         <!-- Runtime, com.sun.xml.bind module -->
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.2</version>
+            <version>3.0.2</version>
         </dependency>
     </dependencies>
 
