--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,6 @@ no.nav.security.oidc:
     discoveryurl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL}
     acceptedaudience: ${LOGINSERVICE_IDPORTEN_AUDIENCE}
     cookie_name: selvbetjening-idtoken
+
+logging:
+  config: "classpath:logback-spring.xml"
