--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -41,6 +41,8 @@ jobs:
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
           proxy-host: https://personopplysninger-proxy.dev-fss-pub.nais.io,
+          aareg-host: https://aareg-services-q1.dev-fss-pub.nais.io,
+          aareg-app-name: aareg-services-nais-q1,
           fss-cluster: dev-fss
           EOF
       - uses: nais/deploy/actions/deploy@master
