--- a/.nais/config.yaml
+++ b/.nais/config.yaml
@@ -30,9 +30,13 @@ spec:
       - application: personopplysninger-proxy
         namespace: personbruker
         cluster: {{ fss-cluster }}
+      - application: {{ aareg-app-name }}
+        namespace: personbruker
+        cluster: {{ fss-cluster }}
     outbound:
       external:
         - host: {{ proxy-host }}
+        - host: {{ aareg-host }}
   resources:
     limits:
       cpu: '3'
