--- a/src/test/resources/application-itest.yaml
+++ b/src/test/resources/application-itest.yaml
@@ -1,6 +1,5 @@
-SRVARBEIDSFORHOLD_API_USERNAME: dummy
-SRVARBEIDSFORHOLD_API_PASSWORD: dummy
 PERSONOPPLYSNINGER_PROXY_TARGET_APP: dummy
+AAREG_TARGET_APP: dummy
 
 KODEVERK_REST_API_URL: http://localhost:${wiremock.server.port}/kodeverk
 EREG_API_URL: http://localhost:${wiremock.server.port}/ereg
