--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -9,10 +9,10 @@ spec:
   image: {{version}}
   port: 8080
   liveness:
-    path: /internal/isAlive
+    path: /person/arbeidsforhold-api/internal/isAlive
     initialDelay: 10
   readiness:
-    path: /internal/isAlive
+    path: /person/arbeidsforhold-api/internal/isAlive
     initialDelay: 10
   replicas:
     min: 2
