Fikset feil i config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ ktor {
     }
 
     application {
-        modules = [no.nav.arbeidsforhold.api.config.BootstrapKt.mainModule]
+        modules = [no.nav.arbeidsforhold.config.BootstrapKt.mainModule]
     }
 }
 
