Deployer alerts ved push til master-branch

--- a/.github/workflows/alert-deploy.yaml
+++ b/.github/workflows/alert-deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy alerts to NAIS
 on:
   push:
     branches:
-      - metrics
+      - master
     paths:
       - './nais/alerts.yaml'
 jobs:
