--- a/.github/workflows/alert-deploy.yaml
+++ b/.github/workflows/alert-deploy.yaml
@@ -1,10 +1,7 @@
 name: Deploy alerts to NAIS
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - './nais/alerts.yaml'
+  workflow_dispatch
+
 jobs:
   apply-alerts:
     name: Apply alerts to cluster
