--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -31,7 +31,7 @@ spec:
       action: "Sjekk loggene for å se hvorfor {{ $labels.backend }} returnerer HTTP feilresponser"
     - alert: Høy andel HTTP klientfeil (4xx responser)
       severity: warning
-      expr: (100 * (sum by (backend) (rate(response_total{status_code=~"^4\\d\\d", namespace="personbruker", app="arbeidsforhold-api"}[3m])) / sum by (backend) (rate(response_total{namespace="personbruker>", app="arbeidsforhold-api"}[3m])))) > 10
+      expr: (100 * (sum by (backend) (rate(response_total{status_code=~"^4\\d\\d", namespace="personbruker", app="arbeidsforhold-api"}[3m])) / sum by (backend) (rate(response_total{namespace="personbruker", app="arbeidsforhold-api"}[3m])))) > 10
       for: 3m
       action: "Sjekk loggene for å se hvorfor {{ $labels.backend }} returnerer HTTP feilresponser"
 
