--- a/.github/workflows/alert-deploy.yaml
+++ b/.github/workflows/alert-deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy alerts
+name: Deploy alerts til prod
 on:
   push:
     branches:
@@ -14,12 +14,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: deploy to dev
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
-          RESOURCE: ./nais/alerts.yaml
       - name: deploy to prod
         uses: nais/deploy/actions/deploy@v1
         env:
