--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -18,8 +18,8 @@ spec:
     enabled: true
     path: /person/arbeidsforhold-api/internal/metrics
   replicas:
-    min: 2
-    max: 4
+    min: {{ min-replicas }}
+    max: {{ max-replicas }}
   tokenx:
     enabled: true
   accessPolicy:
@@ -41,8 +41,8 @@ spec:
     enabled: true
   resources:
     limits:
-      cpu: "3"
+      cpu: 300m
       memory: 768Mi
     requests:
-      cpu: "500m"
+      cpu: 100m
       memory: 384Mi
