--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -13,9 +13,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.17
+          distribution: 'zulu'
+          java-version: 17
       - name: Setup cache
         uses: actions/cache@v3
         with:
