--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -17,9 +17,10 @@ jobs:
         if: github.event.release.target_commitish != 'master'
         run: echo "Release is not on master, aborting"; exit 1;
       - name: Setup java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.17
+          distribution: 'zulu'
+          java-version: 17
       - name: Setup cache
         uses: actions/cache@v3
         with:
