--- a/src/test/resources/application-test.conf
+++ b/src/test/resources/application-test.conf
@@ -1,10 +1,9 @@
 no.nav.security.jwt {
     issuers = [
         {
-            issuer_name = "loginservice"
+            issuer_name = "idporten"
             discoveryurl = "https://dummy"
             accepted_audience = ""
-            cookie_name = "selvbetjening-idtoken"
         }
     ]
 }
