Fikset feil i config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,8 +14,8 @@ no.nav.security.jwt {
     issuers = [
         {
             issuer_name = "idporten"
-            discoveryurl = "https://dummy"
-            accepted_audience = ""
+            discoveryurl = ${IDPORTEN_WELL_KNOWN_URL}
+            accepted_audience = ${IDPORTEN_AUDIENCE}
         }
     ]
 }
