--- a/.github/workflows/alert-deploy.yaml
+++ b/.github/workflows/alert-deploy.yaml
@@ -10,13 +10,14 @@ on:
 jobs:
   apply-alerts:
     name: Apply alerts to cluster
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: deploy to prod
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: ./nais/alerts.yaml
